    <?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#168BC34A"
        tools:context=".MainActivity"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Navigation Drawer Example" />

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >



                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonViewTransactions"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/view_all_transactions"
                            app:icon="@drawable/ic_list" /> <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonAddTransaction"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/add_new_transaction"
                        app:icon="@drawable/ic_add_circle" /> <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/manage_section_title"/> <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonManageCategories"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/manage_categories"
                        app:icon="@drawable/ic_category" /> <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonManageGroups"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/manage_groups"
                        app:icon="@drawable/ic_group" /> <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonManageCurrencies"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/manage_currencies"
                        app:icon="@drawable/ic_currency" /> <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tools_section_title"/> <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonViewReports"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/view_reports"
                        app:icon="@drawable/ic_report"
                        /> <!--<com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonOpenSettings"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    app:icon="@drawable/ic_settings" />--> </LinearLayout>
                </ScrollView>


            </FrameLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>
